# music_library

./: README.md  alembic.ini  pyproject.toml  settings.yml
src/adapters/auth/: cookie_adapter.py  token_adapter.py
src/adapters/database/: alchemy_adapter.py
src/application/: application.py  container.py  server.py
src/application/interactors/: authenticate.py
src/application/services/: album_service.py  artist_service.py  template_service.py  track_service.py
src/application/use_cases/: album_use_case.py  artist_use_case.py  track_use_case.py
src/domain/album/entities/: dto.py  model.py
src/domain/album/repositories/: read_repository.py  write_repository.py
src/domain/artist/entities/: model.py
src/domain/artist/repositories/: __init__.py  read_repository.py  write_repository.py
src/domain/auth/entities/: dto.py  enums.py  model.py
src/domain/auth/exceptions/: auth_exceptions.py  token_exceptions.py
src/domain/template_domain/entities/: model.py
src/domain/template_domain/interfaces/: read_repository_interface.py
src/domain/template_domain/repositories/: read_repository.py  write_repository.py
src/domain/track/entities/: enums.py  model.py
src/domain/track/repositories/: read_repository.py  write_repository.py
src/infrastructure/common/base_entities/: base_interactor.py  base_router.py  typevars.py
src/infrastructure/common/exceptions/: api_axceptions.py
src/infrastructure/common/interfaces/: broker_interface.py  router_interface.py  use_case_interface.py
src/infrastructure/database/models/: __init__.py  album.py  artist.py  base.py  base_mat_view.py  genre.py  (+3 more)
src/presentation/: interactor_fabric.py
(+11 files in other folders)
