[project]
name = "scintilla"
version = "0.0.1"
description = "Репозиторий образец для fastapi приложения"
authors = [
    {name = "timmashkov"}
]
license = {text = "Free"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "flake8 (>=7.2.0,<8.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "aio-pika (>=9.5.5,<10.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "redis (>=6.0.0,<7.0.0)",
    "dynaconf (>=3.2.11,<4.0.0)",
    "fastapi-filter (>=2.0.1,<3.0.0)",
    "orjson (>=3.10.18,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
