[project]
name = "music-library-service"
version = "0.0.7"
description = "Music library service"
authors = [
    {name = "timmashkov",email = "bodomizer@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "dynaconf (>=3.2.11,<4.0.0)",
    "orjson (>=3.11.0,<4.0.0)",
    "aiokafka (>=0.12.0,<0.13.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "fastapi-filter (>=2.0.1,<3.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=25.1.0,<26.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
